syntax = "proto3";
option go_package = "../grpc/run;run";
// option go_package = "生成位置;包名";

//定义request model
message runRequest{
  bool it = 1;
  string cpu = 2;
  string mem = 3;
  repeated string cmd = 4;
}

//定义request model
message runResponse{
  int32 containerId = 1;
}

//定义服务主体
service runService{
  //定义方法
  rpc RunContainer(runRequest) returns(runResponse);
}